--- a/tazapp/build.gradle
+++ b/tazapp/build.gradle
@@ -53,55 +53,11 @@ idea {
     }
 }
 
-buildscript {
-    repositories {
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
-    }
-
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'io.fabric'
 apply plugin: 'com.akaita.android.easylauncher'
-apply plugin: 'com.github.triplet.play'
 apply plugin: 'kotlin-kapt'
-
-def overheadPath
-
-File tcLocalPropsFile = project.rootProject.file('tc_local.properties')
-if (tcLocalPropsFile.exists()) {
-    logger.quiet('Found ' + tcLocalPropsFile)
-    def tcLocalProps = new Properties()
-    tcLocalProps.load(tcLocalPropsFile.newDataInputStream())
-    overheadPath = tcLocalProps.getProperty("overheadpath")
-} else {
-    logger.error('tc_local.properties not found')
-}
-
-if (overheadPath == null) {
-    overheadPath = System.getenv("overheadpath")
-}
-
-if (overheadPath != null) {
-    logger.quiet('Found ' + ":" + overheadPath)
-    project.ext.set("overheadPath", overheadPath)
-    File extraGradleFile = new File(overheadPath, project.name + ".gradle")
-    if (extraGradleFile.exists()) {
-        logger.quiet('Found ' + extraGradleFile)
-        apply from: extraGradleFile
-    } else {
-        logger.error("${extraGradleFile} not found")
-    }
-} else {
-    logger.error('overheadpath not set')
-}
 
 easylauncher {
     iconNames "@mipmap/ic_launcher_foreground" // Traditional launcher icon
@@ -176,13 +132,11 @@ android {
             debuggable true
             versionNameSuffix " Debug"
             applicationIdSuffix ".debug"
-            ext.enableCrashlytics = false
         }
         staging.initWith(buildTypes.debug)
         staging {
             versionNameSuffix " Staging"
             applicationIdSuffix ".staging"
-            ext.enableCrashlytics = true
         }
         release {
             zipAlignEnabled true
@@ -262,7 +216,7 @@ android {
 
     productFlavors.all { flavor ->
         def helpDir = new File(project.projectDir, "src/${flavor.name}/assets/help")
-        def localZip = new File(project.ext.overheadPath, "temp_${flavor.name}.zip")
+        def localZip = new File("temp_${flavor.name}.zip")
         def helpDownloadTaskName = "helpDownloadFile${flavor.name.capitalize()}"
         def helpUnzipTaskName = "helpUnzipFile${flavor.name.capitalize()}"
         def helpDeleteZipTaskName = "helpDeleteZipFile${flavor.name.capitalize()}"
@@ -294,8 +248,8 @@ android {
 
 repositories {
     maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
-    maven { url 'https://maven.fabric.io/public' }
-    mavenCentral()
+    jcenter()
+    google()
 }
 
 dependencies {
@@ -322,16 +276,11 @@ dependencies {
     implementation 'com.github.jrejaud:ViewPagerIndicator2:0.0.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.yqritc:recyclerview-flexibledivider:1.2.9'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
-        transitive = true
-    }
     implementation 'net.ypresto.timbertreeutils:timbertreeutils:1.0.0'
     implementation 'com.scottyab:aescrypt:0.0.1'
     implementation 'com.github.matecode:Snacky:a7a29094'
     implementation('com.github.matecode:androiddialog:1.3.36')
 //    implementation 'commons-io:commons-io:2.6'
-    implementation "com.google.firebase:firebase-core:16.0.6"
-    implementation "com.google.firebase:firebase-messaging:17.3.4"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
 
@@ -375,4 +324,4 @@ class Download extends DefaultTask {
     }
 }
 
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
