--- a/tazapp/build.gradle
+++ b/tazapp/build.gradle
@@ -91,7 +91,7 @@ android {
         minSdkVersion minSdkVer
         targetSdkVersion targetSdkVer
         versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
-        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}.${versionBuild}"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [eventBusIndex        : 'de.thecode.android.tazreader.eventbus.EventBusIndex',
